clang/test/CXX/basic/basic.stc/basic.stc.dynamic/basic.stc.dynamic.deallocation/p1.cpp
// RUN: clang-cc -fsyntax-only -verify %s

struct A {
  void operator delete(void*);
};

namespace NS {
  void operator delete(void *); // expected-error {{'operator delete' cannot be declared inside a namespace}}
}

static void operator delete(void *); // expected-error {{'operator delete' cannot be declared static in global scope}}
